--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
+.clang_complete
+core_version.h
+custom.h
+.DS_Store
+.gcc-flags.json
 .pioenvs
 .piolibdeps
-.clang_complete
-.gcc-flags.json
-.piolibdeps
+.python-version
+.travis.yml
 .vscode
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.pioenvs
+.piolibdeps
+.node_modules
