- Added support for storing configuration to flash

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 [platformio]
 env_default = fastybird-ethernet-gateway
 src_dir = firmware
-data_dir = firmware/data
+data_dir = firmware/storage
 
 [espressif]
 # ------------------------------------------------------------------------------
@@ -108,7 +108,7 @@ framework = ${espressif.framework}
 board = ${espressif.board_4m}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_1m0m} -DFASTYBIRD_WIFI_GATEWAY -DIN_DEBUG_MODE=true
+build_flags = ${espressif.build_flags_4m1m} -DFASTYBIRD_WIFI_GATEWAY -DIN_DEBUG_MODE=true
 upload_speed = ${espressif.upload_speed}
 monitor_speed = ${espressif.monitor_speed}
 extra_scripts = ${espressif.extra_scripts}
