- Working on it - Using thing SN in topic - Updated thing mqtt api - Removed direct control

--- a/platformio.ini
+++ b/platformio.ini
@@ -187,3 +187,28 @@ lib_ignore = ${espressif.lib_ignore}
 build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_BASIC -DDALLAS_SUPPORT=1
 monitor_speed = ${espressif.monitor_speed}
 extra_scripts = ${espressif.extra_scripts}
+
+[env:itead-sonoff-s20]
+platform = ${espressif.platform}
+framework = ${espressif.framework}
+board = ${espressif.board_1m}
+board_build.flash_mode = ${espressif.flash_mode}
+lib_deps = ${espressif.lib_deps}
+lib_ignore = ${espressif.lib_ignore}
+build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_S20
+monitor_speed = ${espressif.monitor_speed}
+extra_scripts = ${espressif.extra_scripts}
+
+[env:itead-sonoff-s20-ota]
+platform = ${espressif.platform}
+framework = ${espressif.framework}
+board = ${espressif.board_1m}
+board_build.flash_mode = ${espressif.flash_mode}
+lib_deps = ${espressif.lib_deps}
+lib_ignore = ${espressif.lib_ignore}
+build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_S20
+upload_speed = ${espressif.upload_speed}
+upload_port = ${espressif.upload_port}
+upload_flags = ${espressif.upload_flags}
+monitor_speed = ${espressif.monitor_speed}
+extra_scripts = ${espressif.extra_scripts}
