- Removing unused sensors

--- a/platformio.ini
+++ b/platformio.ini
@@ -86,8 +86,6 @@ lib_deps =
     Brzo I2C
     PubSubClient
     Queue
-    OneWire
-    PZEM004T
     https://github.com/marvinroger/async-mqtt-client#v0.8.1
     https://github.com/plerup/espsoftwareserial#3.4.1
     https://github.com/me-no-dev/ESPAsyncTCP#55cd520
@@ -99,12 +97,24 @@ lib_deps =
     https://github.com/xoseperez/hlw8012.git#1.1.0
     https://github.com/xoseperez/Time
     https://bitbucket.org/xoseperez/nofuss.git#0.2.5
-    https://github.com/sparkfun/SparkFun_VEML6075_Arduino_Library#V_1.0.3
-    https://github.com/mcleng/MAX6675-Library#2.0.1
 lib_ignore =
 
 # ------------------------------------------------------------------------------
-# SPECIFIC BOARDS
+# SPECIAL BUILDS FOR TESTING - DO. NOT. USE. ever ---
+# ------------------------------------------------------------------------------
+
+[env:itead-sonoff-pow-test]
+platform = ${espressif.platform}
+framework = ${espressif.framework}
+board = ${espressif.board_4m}
+lib_deps = ${espressif.lib_deps}
+lib_ignore = ${espressif.lib_ignore}
+build_flags = ${espressif.build_flags_4m1m} -DITEAD_SONOFF_POW -DIN_DEBUG_MODE=true
+monitor_speed = ${espressif.monitor_speed}
+extra_scripts = ${espressif.extra_scripts}
+
+# ------------------------------------------------------------------------------
+# FASTYBIRD BOARDS
 # ------------------------------------------------------------------------------
 
 [env:fastybird-wifi-gateway]
