- Fixing config update compare

--- a/platformio.ini
+++ b/platformio.ini
@@ -109,7 +109,7 @@ framework = ${espressif.framework}
 board = ${espressif.board_4m}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_4m1m} -DITEAD_SONOFF_POW -DIN_DEBUG_MODE=true
+build_flags = ${espressif.build_flags_4m1m} -DITEAD_SONOFF_POW -DDEBUG_SUPPORT=1 -DDEBUG_SERIAL_SUPPORT=1
 monitor_speed = ${espressif.monitor_speed}
 extra_scripts = ${espressif.extra_scripts}
 
@@ -123,7 +123,7 @@ framework = ${espressif.framework}
 board = ${espressif.board_4m}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_4m1m} -DFASTYBIRD_WIFI_GATEWAY -DIN_DEBUG_MODE=true
+build_flags = ${espressif.build_flags_4m1m} -DFASTYBIRD_WIFI_GATEWAY
 upload_speed = ${espressif.upload_speed}
 monitor_speed = ${espressif.monitor_speed}
 extra_scripts = ${espressif.extra_scripts}
@@ -131,16 +131,6 @@ extra_scripts = ${espressif.extra_scripts}
 # ------------------------------------------------------------------------------
 # ITEAD BOARDS
 # ------------------------------------------------------------------------------
-
-[env:itead-sonoff-basic-test]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
-board = ${espressif.board_4m}
-lib_deps = ${espressif.lib_deps}
-lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_BASIC -DIN_DEBUG_MODE=true
-monitor_speed = ${espressif.monitor_speed}
-extra_scripts = ${espressif.extra_scripts}
 
 [env:itead-sonoff-basic]
 platform = ${espressif.platform}
