- Added sonoff - Fixed sensors bugs - Added support for multiple channel properties

--- a/platformio.ini
+++ b/platformio.ini
@@ -113,6 +113,16 @@ build_flags = ${espressif.build_flags_4m1m} -DITEAD_SONOFF_POW -DDEBUG_SUPPORT=1
 monitor_speed = ${espressif.monitor_speed}
 extra_scripts = ${espressif.extra_scripts}
 
+[env:itead-sonoff-sc-test]
+platform = ${espressif.platform}
+framework = ${espressif.framework}
+board = ${espressif.board_4m}
+lib_deps = ${espressif.lib_deps}
+lib_ignore = ${espressif.lib_ignore}
+build_flags = ${espressif.build_flags_4m1m} -DITEAD_SONOFF_SC
+monitor_speed = 19200
+extra_scripts = ${espressif.extra_scripts}
+
 # ------------------------------------------------------------------------------
 # FASTYBIRD BOARDS
 # ------------------------------------------------------------------------------
@@ -305,6 +315,29 @@ board_build.flash_mode = ${espressif.flash_mode}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
 build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_POW_R2 -DDISABLE_POSTMORTEM_STACKDUMP
+upload_speed = ${espressif.upload_speed}
+upload_port = ${espressif.upload_port}
+upload_flags = ${espressif.upload_flags}
+extra_scripts = ${espressif.extra_scripts}
+
+[env:itead-sonoff-sc]
+platform = ${espressif.platform}
+framework = ${espressif.framework}
+board = ${espressif.board_1m}
+board_build.flash_mode = ${espressif.flash_mode}
+lib_deps = ${espressif.lib_deps}
+lib_ignore = ${espressif.lib_ignore}
+build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_SC
+extra_scripts = ${espressif.extra_scripts}
+
+[env:itead-sonoff-sc-ota]
+platform = ${espressif.platform}
+framework = ${espressif.framework}
+board = ${espressif.board_1m}
+board_build.flash_mode = ${espressif.flash_mode}
+lib_deps = ${espressif.lib_deps}
+lib_ignore = ${espressif.lib_ignore}
+build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_SC
 upload_speed = ${espressif.upload_speed}
 upload_port = ${espressif.upload_port}
 upload_flags = ${espressif.upload_flags}
