- Move nodes log under separate config

--- a/platformio.ini
+++ b/platformio.ini
@@ -133,7 +133,7 @@ framework = ${espressif.framework}
 board = ${espressif.board_4m}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_4m1m} -DFASTYBIRD_WIFI_GATEWAY
+build_flags = ${espressif.build_flags_4m1m} -DFASTYBIRD_WIFI_GATEWAY -DDEBUG_SUPPORT=1 -DDEBUG_SERIAL_SUPPORT=1
 upload_speed = ${espressif.upload_speed}
 monitor_speed = ${espressif.monitor_speed}
 extra_scripts = ${espressif.extra_scripts}
