- Big bang refactoring

--- a/platformio.ini
+++ b/platformio.ini
@@ -93,10 +93,8 @@ lib_deps =
     https://github.com/xoseperez/debounceevent.git#2.0.4
     https://github.com/xoseperez/eeprom_rotate#0.9.1
     https://github.com/xoseperez/justwifi.git#2.0.2
-    https://github.com/xoseperez/NtpClient.git#0942ebc
     https://github.com/xoseperez/hlw8012.git#1.1.0
     https://github.com/xoseperez/Time
-    https://bitbucket.org/xoseperez/nofuss.git#0.2.5
 lib_ignore =
 
 # ------------------------------------------------------------------------------
@@ -111,7 +109,6 @@ lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
 build_flags = ${espressif.build_flags_4m1m} -DITEAD_SONOFF_POW -DDEBUG_SUPPORT=1 -DDEBUG_SERIAL_SUPPORT=1
 monitor_speed = ${espressif.monitor_speed}
-extra_scripts = ${espressif.extra_scripts}
 
 [env:itead-sonoff-sc-test]
 platform = ${espressif.platform}
@@ -121,7 +118,6 @@ lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
 build_flags = ${espressif.build_flags_4m1m} -DITEAD_SONOFF_SC
 monitor_speed = 19200
-extra_scripts = ${espressif.extra_scripts}
 
 # ------------------------------------------------------------------------------
 # FASTYBIRD BOARDS
@@ -136,7 +132,16 @@ lib_ignore = ${espressif.lib_ignore}
 build_flags = ${espressif.build_flags_4m1m} -DFASTYBIRD_WIFI_GATEWAY -DDEBUG_SUPPORT=1 -DDEBUG_SERIAL_SUPPORT=1
 upload_speed = ${espressif.upload_speed}
 monitor_speed = ${espressif.monitor_speed}
-extra_scripts = ${espressif.extra_scripts}
+
+[env:fastybird-3ch-power-strip-r1]
+platform = ${espressif.platform}
+framework = ${espressif.framework}
+board = ${espressif.board_1m}
+board_build.flash_mode = dout
+lib_deps = ${espressif.lib_deps}
+lib_ignore = ${espressif.lib_ignore}
+build_flags = ${espressif.build_flags_1m0m} -DFASTYBIRD_3CH_POWER_STRIP_R1
+monitor_speed = ${espressif.monitor_speed}
 
 # ------------------------------------------------------------------------------
 # ITEAD BOARDS
@@ -151,21 +156,6 @@ lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
 build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_BASIC
 monitor_speed = ${espressif.monitor_speed}
-extra_scripts = ${espressif.extra_scripts}
-
-[env:itead-sonoff-basic-ota]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
-board = ${espressif.board_1m}
-board_build.flash_mode = dout
-lib_deps = ${espressif.lib_deps}
-lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_BASIC
-upload_speed = ${espressif.upload_speed}
-upload_port = ${espressif.upload_port}
-upload_flags = ${espressif.upload_flags}
-monitor_speed = ${espressif.monitor_speed}
-extra_scripts = ${espressif.extra_scripts}
 
 [env:itead-sonoff-basic-dht]
 platform = ${espressif.platform}
@@ -176,21 +166,6 @@ lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
 build_flags = ${common.build_flags_1m0m} -DITEAD_SONOFF_BASIC -DDHT_SUPPORT=1
 monitor_speed = ${espressif.monitor_speed}
-extra_scripts = ${espressif.extra_scripts}
-
-[env:itead-sonoff-basic-dht-ota]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
-board = ${espressif.board_1m}
-board_build.flash_mode = dout
-lib_deps = ${espressif.lib_deps}
-lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_BASIC -DDHT_SUPPORT=1
-upload_speed = ${espressif.upload_speed}
-upload_port = ${espressif.upload_port}
-upload_flags = ${espressif.upload_flags}
-monitor_speed = ${espressif.monitor_speed}
-extra_scripts = ${espressif.extra_scripts}
 
 [env:itead-sonoff-basic-dallas]
 platform = ${espressif.platform}
@@ -201,7 +176,6 @@ lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
 build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_BASIC -DDALLAS_SUPPORT=1
 monitor_speed = ${espressif.monitor_speed}
-extra_scripts = ${espressif.extra_scripts}
 
 [env:itead-sonoff-s20]
 platform = ${espressif.platform}
@@ -212,44 +186,6 @@ lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
 build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_S20
 monitor_speed = ${espressif.monitor_speed}
-extra_scripts = ${espressif.extra_scripts}
-
-[env:itead-sonoff-s20-ota]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
-board = ${espressif.board_1m}
-board_build.flash_mode = ${espressif.flash_mode}
-lib_deps = ${espressif.lib_deps}
-lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_S20
-upload_speed = ${espressif.upload_speed}
-upload_port = ${espressif.upload_port}
-upload_flags = ${espressif.upload_flags}
-monitor_speed = ${espressif.monitor_speed}
-extra_scripts = ${espressif.extra_scripts}
-
-[env:itead-sonoff-dual]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
-board = ${espressif.board_1m}
-board_build.flash_mode = ${espressif.flash_mode}
-lib_deps = ${espressif.lib_deps}
-lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_DUAL -DDISABLE_POSTMORTEM_STACKDUMP
-extra_scripts = ${espressif.extra_scripts}
-
-[env:itead-sonoff-dual-ota]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
-board = ${espressif.board_1m}
-board_build.flash_mode = ${espressif.flash_mode}
-lib_deps = ${espressif.lib_deps}
-lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_DUAL -DDISABLE_POSTMORTEM_STACKDUMP
-upload_speed = ${espressif.upload_speed}
-upload_port = ${espressif.upload_port}
-upload_flags = ${espressif.upload_flags}
-extra_scripts = ${espressif.extra_scripts}
 
 [env:itead-sonoff-dual-r2]
 platform = ${espressif.platform}
@@ -259,20 +195,6 @@ board_build.flash_mode = ${espressif.flash_mode}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
 build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_DUAL_R2
-extra_scripts = ${espressif.extra_scripts}
-
-[env:itead-sonoff-dual-r2-ota]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
-board = ${espressif.board_1m}
-board_build.flash_mode = ${espressif.flash_mode}
-lib_deps = ${espressif.lib_deps}
-lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_DUAL_R2
-upload_speed = ${espressif.upload_speed}
-upload_port = ${espressif.upload_port}
-upload_flags = ${espressif.upload_flags}
-extra_scripts = ${espressif.extra_scripts}
 
 [env:itead-sonoff-pow]
 platform = ${espressif.platform}
@@ -282,20 +204,6 @@ board_build.flash_mode = ${espressif.flash_mode}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
 build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_POW
-extra_scripts = ${espressif.extra_scripts}
-
-[env:itead-sonoff-pow-ota]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
-board = ${espressif.board_1m}
-board_build.flash_mode = ${espressif.flash_mode}
-lib_deps = ${espressif.lib_deps}
-lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_POW
-upload_speed = ${espressif.upload_speed}
-upload_port = ${espressif.upload_port}
-upload_flags = ${espressif.upload_flags}
-extra_scripts = ${espressif.extra_scripts}
 
 [env:itead-sonoff-pow-r2]
 platform = ${espressif.platform}
@@ -305,20 +213,6 @@ board_build.flash_mode = ${espressif.flash_mode}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
 build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_POW_R2 -DDISABLE_POSTMORTEM_STACKDUMP
-extra_scripts = ${espressif.extra_scripts}
-
-[env:itead-sonoff-pow-r2-ota]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
-board = ${espressif.board_1m}
-board_build.flash_mode = ${espressif.flash_mode}
-lib_deps = ${espressif.lib_deps}
-lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_POW_R2 -DDISABLE_POSTMORTEM_STACKDUMP
-upload_speed = ${espressif.upload_speed}
-upload_port = ${espressif.upload_port}
-upload_flags = ${espressif.upload_flags}
-extra_scripts = ${espressif.extra_scripts}
 
 [env:itead-sonoff-sc]
 platform = ${espressif.platform}
@@ -328,17 +222,12 @@ board_build.flash_mode = ${espressif.flash_mode}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
 build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_SC
-extra_scripts = ${espressif.extra_scripts}
 
-[env:itead-sonoff-sc-ota]
+[env:itead-sonoff-rfbirdge]
 platform = ${espressif.platform}
 framework = ${espressif.framework}
 board = ${espressif.board_1m}
 board_build.flash_mode = ${espressif.flash_mode}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_SC
-upload_speed = ${espressif.upload_speed}
-upload_port = ${espressif.upload_port}
-upload_flags = ${espressif.upload_flags}
-extra_scripts = ${espressif.extra_scripts}
+build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_RFBRIDGE
