--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,6 @@
 ; http://docs.platformio.org/en/stable/projectconf.html
 
 [platformio]
-default_envs = fastybird-wifi-gateway
 src_dir = firmware
 data_dir = firmware/storage
 
@@ -84,8 +83,7 @@ lib_deps =
     ArduinoJson@^5.13.4
     Embedis
     Brzo I2C
-    PubSubClient
-    Queue
+    Regexp,
     https://github.com/marvinroger/async-mqtt-client#v0.8.1
     https://github.com/plerup/espsoftwareserial#3.4.1
     https://github.com/me-no-dev/ESPAsyncTCP#55cd520
@@ -95,6 +93,7 @@ lib_deps =
     https://github.com/xoseperez/justwifi.git#2.0.2
     https://github.com/xoseperez/hlw8012.git#1.1.0
     https://github.com/xoseperez/Time
+
 lib_ignore =
 
 # ------------------------------------------------------------------------------
@@ -129,7 +128,7 @@ framework = ${espressif.framework}
 board = ${espressif.board_4m}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_4m1m} -DFASTYBIRD_WIFI_GATEWAY -DDEBUG_SUPPORT=1 -DDEBUG_SERIAL_SUPPORT=1
+build_flags = ${espressif.build_flags_4m1m} -DFASTYBIRD_WIFI_GATEWAY
 upload_speed = ${espressif.upload_speed}
 monitor_speed = ${espressif.monitor_speed}
 
@@ -151,30 +150,10 @@ monitor_speed = ${espressif.monitor_speed}
 platform = ${espressif.platform}
 framework = ${espressif.framework}
 board = ${espressif.board_1m}
-board_build.flash_mode = dout
+board_build.flash_mode = ${espressif.flash_mode}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
 build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_BASIC
-monitor_speed = ${espressif.monitor_speed}
-
-[env:itead-sonoff-basic-dht]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
-board = ${espressif.board_1m}
-board_build.flash_mode = dout
-lib_deps = ${espressif.lib_deps}
-lib_ignore = ${espressif.lib_ignore}
-build_flags = ${common.build_flags_1m0m} -DITEAD_SONOFF_BASIC -DDHT_SUPPORT=1
-monitor_speed = ${espressif.monitor_speed}
-
-[env:itead-sonoff-basic-dallas]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
-board = ${espressif.board_1m}
-board_build.flash_mode = dout
-lib_deps = ${espressif.lib_deps}
-lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_BASIC -DDALLAS_SUPPORT=1
 monitor_speed = ${espressif.monitor_speed}
 
 [env:itead-sonoff-s20]
@@ -195,6 +174,7 @@ board_build.flash_mode = ${espressif.flash_mode}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
 build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_DUAL_R2
+monitor_speed = ${espressif.monitor_speed}
 
 [env:itead-sonoff-pow]
 platform = ${espressif.platform}
@@ -204,6 +184,7 @@ board_build.flash_mode = ${espressif.flash_mode}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
 build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_POW
+monitor_speed = ${espressif.monitor_speed}
 
 [env:itead-sonoff-pow-r2]
 platform = ${espressif.platform}
@@ -213,6 +194,7 @@ board_build.flash_mode = ${espressif.flash_mode}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
 build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_POW_R2 -DDISABLE_POSTMORTEM_STACKDUMP
+monitor_speed = ${espressif.monitor_speed}
 
 [env:itead-sonoff-sc]
 platform = ${espressif.platform}
@@ -222,6 +204,7 @@ board_build.flash_mode = ${espressif.flash_mode}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
 build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_SC
+monitor_speed = 19200
 
 [env:itead-sonoff-rfbirdge]
 platform = ${espressif.platform}
@@ -231,3 +214,4 @@ board_build.flash_mode = ${espressif.flash_mode}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
 build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_RFBRIDGE
+monitor_speed = ${espressif.monitor_speed}
