--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "main": "gulpfile.js",
   "author": "FastyBird Ltd. <info@fastybird.com>",
   "license": "GPL-3.0",
-  "devDependencies": {
+  "dependencies": {
     "gulp": "^4.0.2",
-    "gulp-base64-favicon": "^1.0.2",
+    "gulp-base64-favicon": "^1.0.3",
     "gulp-crass": "^0.2.2",
     "gulp-css-base64": "^1.3.4",
-    "gulp-csslint": "^1.0.0",
-    "gulp-gzip": "^1.4.0",
+    "gulp-csslint": "^1.0.1",
+    "gulp-gzip": "^1.4.2",
     "gulp-htmllint": "0.0.16",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-inline": "^0.1.1",
+    "gulp-inline": "^0.1.3",
     "gulp-remove-code": "^3.0.4",
-    "gulp-rename": "^1.4.0",
+    "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0"
   }
 }
