Fixing serial bus problems

--- a/platformio.ini
+++ b/platformio.ini
@@ -28,6 +28,7 @@ platform_170 = espressif8266@1.7.0
 platform_180 = espressif8266@1.8.0
 platform_latest = ${espressif.platform_180}
 platform = ${espressif.platform_150}
+platform_esp32 = espressif32
 
 # ------------------------------------------------------------------------------
 # FLAGS: DEBUG
@@ -126,6 +127,16 @@ monitor_speed = 19200
 platform = ${espressif.platform}
 framework = ${espressif.framework}
 board = ${espressif.board_4m}
+lib_deps = ${espressif.lib_deps}
+lib_ignore = ${espressif.lib_ignore}
+build_flags = ${espressif.build_flags_4m1m} -DFASTYBIRD_WIFI_GATEWAY
+upload_speed = ${espressif.upload_speed}
+monitor_speed = ${espressif.monitor_speed}
+
+[env:fastybird-wifi-gateway-esp32]
+platform = ${espressif.platform_esp32}
+framework = espidf
+board = esp32dev
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
 build_flags = ${espressif.build_flags_4m1m} -DFASTYBIRD_WIFI_GATEWAY
