--- a/platformio.ini
+++ b/platformio.ini
@@ -84,7 +84,7 @@ lib_deps =
     ArduinoJson@^5.13.4
     Embedis
     Brzo I2C
-    Regexp,
+    Regexp
     https://github.com/marvinroger/async-mqtt-client#v0.8.1
     https://github.com/plerup/espsoftwareserial#3.4.1
     https://github.com/me-no-dev/ESPAsyncTCP#55cd520
@@ -122,26 +122,6 @@ monitor_speed = 19200
 # ------------------------------------------------------------------------------
 # FASTYBIRD BOARDS
 # ------------------------------------------------------------------------------
-
-[env:fastybird-wifi-gateway]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
-board = ${espressif.board_4m}
-lib_deps = ${espressif.lib_deps}
-lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_4m1m} -DFASTYBIRD_WIFI_GATEWAY
-upload_speed = ${espressif.upload_speed}
-monitor_speed = ${espressif.monitor_speed}
-
-[env:fastybird-wifi-gateway-esp32]
-platform = ${espressif.platform_esp32}
-framework = espidf
-board = esp32dev
-lib_deps = ${espressif.lib_deps}
-lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_4m1m} -DFASTYBIRD_WIFI_GATEWAY
-upload_speed = ${espressif.upload_speed}
-monitor_speed = ${espressif.monitor_speed}
 
 [env:fastybird-3ch-power-strip-r1]
 platform = ${espressif.platform}
