--- a/platformio.ini
+++ b/platformio.ini
@@ -11,76 +11,21 @@
 src_dir = firmware
 data_dir = firmware/storage
 
+# ------------------------------------------------------------------------------
+# ESP8266 & ESP32
+# ------------------------------------------------------------------------------
+
 [espressif]
-# ------------------------------------------------------------------------------
-# PLATFORM:
-#   !! DO NOT confuse platformio's ESP8266 development platform with Arduino core for ESP8266
-#   We use platformIO 1.5.0 as default
-#
-#   platformIO 1.5.0 = arduino core 2.3.0
-#   platformIO 1.6.0 = arduino core 2.4.0
-#   platformIO 1.7.3 = arduino core 2.4.1
-#   platformIO 1.8.0 = arduino core 2.4.2
-# ------------------------------------------------------------------------------
-platform_150 = espressif8266@1.5.0
-platform_160 = espressif8266@1.6.0
-platform_170 = espressif8266@1.7.0
-platform_180 = espressif8266@1.8.0
-platform_latest = ${espressif.platform_180}
-platform = ${espressif.platform_150}
-platform_esp32 = espressif32
+platform_esp8266 = espressif8266@3.2.0
+platform_esp32 = espressif32@3.5.0
 
-# ------------------------------------------------------------------------------
-# FLAGS: DEBUG
-#
-# ------------------------------------------------------------------------------
-debug_flags = -DDEBUG_ESP_CORE -DDEBUG_ESP_SSL -DDEBUG_ESP_WIFI -DDEBUG_ESP_HTTP_CLIENT -DDEBUG_ESP_HTTP_UPDATE -DDEBUG_ESP_HTTP_SERVER -DDEBUG_ESP_UPDATER -DDEBUG_ESP_OTA -DDEBUG_TLS_MEM
-#if needed (for memleaks etc) also add; -DDEBUG_ESP_OOM -include "umm_malloc/umm_malloc_cfg.h"
-
-# ------------------------------------------------------------------------------
-# FLAGS: build flags
-#   build flags for 512k/1m ESP's are different because we use Linker Scripts to adjust flash split
-#    build_flags_512k ( 512 KB) =  487 KB sketch,  4 KB eeprom, 16 KB reserved
-#    build_flags_1m0m (1024 KB) =  999 KB sketch,  4 KB eeprom, 16 KB reserved
-#    build_flags_4m1m (4096 KB) = 1019 KB sketch, 16 KB eeprom,  992 KB spiffs, 16 KB reserved, 2048 KB empty/ota?
-#    build_flags_4m3m (4096 KB) = 1019 KB sketch, 16 KB eeprom, 3040 KB spiffs, 16 KB reserved
-#
-# Available lwIP variants (macros):
-#    -DPIO_FRAMEWORK_ARDUINO_LWIP_HIGHER_BANDWIDTH  = v1.4 Higher Bandwidth (default)
-#    -DPIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY       = v2 Lower Memory
-#    -DPIO_FRAMEWORK_ARDUINO_LWIP2_HIGHER_BANDWIDTH = v2 Higher Bandwidth
-# ------------------------------------------------------------------------------
-build_flags = -g -w -DMQTT_MAX_PACKET_SIZE=400 -DNO_GLOBAL_EEPROM ${sysenv.ESPURNA_FLAGS} -DPIO_FRAMEWORK_ARDUINO_LWIP_HIGHER_BANDWIDTH
-build_flags_512k = ${espressif.build_flags} -Wl,-Teagle.flash.512k0m1s.ld
-build_flags_1m0m = ${espressif.build_flags} -Wl,-Teagle.flash.1m0m1s.ld
-build_flags_2m1m = ${espressif.build_flags} -Wl,-Teagle.flash.2m1m4s.ld
-build_flags_4m1m = ${espressif.build_flags} -Wl,-Teagle.flash.4m1m4s.ld
-build_flags_4m3m = ${espressif.build_flags} -Wl,-Teagle.flash.4m3m4s.ld
-
-# ------------------------------------------------------------------------------
-# OTA:
-# ------------------------------------------------------------------------------
-upload_port = "${sysenv.FASTYBIRD_IP}"
-upload_flags = --auth="${sysenv.FASTYBIRD_AUTH}"
-
-# ------------------------------------------------------------------------------
-# OTHER SETTINGS:
-# ------------------------------------------------------------------------------
-framework = arduino
 board_1m = esp01_1m
 board_2m = esp_wroom_02
 board_4m = esp12e
-flash_mode = dout
-monitor_speed = 115200
-upload_speed = 115200
-extra_scripts = extra_scripts.py
 
-# ------------------------------------------------------------------------------
-# LIBRARIES: required dependencies
-#   Please note that we don't always use the latest version of a library.
-# ------------------------------------------------------------------------------
+build_flags = -g -w -DMQTT_MAX_PACKET_SIZE=400 -DNO_GLOBAL_EEPROM ${sysenv.ESPURNA_FLAGS} -DPIO_FRAMEWORK_ARDUINO_LWIP_HIGHER_BANDWIDTH
+
 lib_deps =
-    PJON
     ArduinoJson@^5.13.4
     Embedis
     Brzo I2C
@@ -96,113 +41,150 @@ lib_deps =
     https://github.com/xoseperez/Time
 
 lib_ignore =
+    Brzo I2C
 
 # ------------------------------------------------------------------------------
-# SPECIAL BUILDS FOR TESTING - DO. NOT. USE. ever ---
+# ATMEL SAM
 # ------------------------------------------------------------------------------
 
-[env:itead-sonoff-pow-test]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
-board = ${espressif.board_4m}
-lib_deps = ${espressif.lib_deps}
-lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_4m1m} -DITEAD_SONOFF_POW -DDEBUG_SUPPORT=1 -DDEBUG_SERIAL_SUPPORT=1
-monitor_speed = ${espressif.monitor_speed}
+[atmelsam]
+platform = atmelsam
 
-[env:itead-sonoff-sc-test]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
-board = ${espressif.board_4m}
+board_m0 = mzeroUSB
+
+build_flags_sam = -Llibs -DDEBUG
+
+lib_deps =
+
+lib_ignore =
+
+# ------------------------------------------------------------------------------
+# COMMON CONFIGURATION
+# ------------------------------------------------------------------------------
+
+[debug]
+debug_flags = -DDEBUG_ESP_CORE -DDEBUG_ESP_SSL -DDEBUG_ESP_WIFI -DDEBUG_ESP_HTTP_CLIENT -DDEBUG_ESP_HTTP_UPDATE -DDEBUG_ESP_HTTP_SERVER -DDEBUG_ESP_UPDATER -DDEBUG_ESP_OTA -DDEBUG_TLS_MEM
+
+[ota]
+upload_port = "${sysenv.FASTYBIRD_IP}"
+upload_flags = --auth="${sysenv.FASTYBIRD_AUTH}"
+
+[common]
+framework = arduino
+flash_mode = dout
+monitor_speed = 115200
+upload_speed = 115200
+extra_scripts = extra_scripts.py
+
+# ------------------------------------------------------------------------------
+# SPECIAL BUILDS FOR TESTING
+# ------------------------------------------------------------------------------
+
+[env:test-board-d1]
+platform = ${espressif.platform_esp8266}
+framework = ${common.framework}
+board = d1
+board_build.ldscript = eagle.flash.1m256.ld
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_4m1m} -DITEAD_SONOFF_SC
-monitor_speed = 19200
+build_flags = ${espressif.build_flags} -DFASTYBIRD_3CH_POWER_STRIP_R1 -DDEBUG_SUPPORT=1 -DDEBUG_SERIAL_SUPPORT=1
+monitor_speed = ${common.monitor_speed}
+
+[env:test-board-samd21]
+platform = ${atmelsam.platform}
+framework = ${common.framework}
+board = ${atmelsam.board_m0}
+lib_deps = ${atmelsam.lib_deps}
+lib_ignore = ${atmelsam.lib_ignore}
+build_flags = ${atmelsam.build_flags} -DFASTYBIRD_CORE -DDEBUG_SUPPORT=1 -DDEBUG_SERIAL_SUPPORT=1
+board_build.mcu = samd21g18a
+board_build.f_cpu = 48000000L
+upload_protocol = stk500v2
 
 # ------------------------------------------------------------------------------
 # FASTYBIRD BOARDS
 # ------------------------------------------------------------------------------
 
 [env:fastybird-3ch-power-strip-r1]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
+platform = ${espressif.platform_esp8266}
+framework = ${common.framework}
 board = ${espressif.board_1m}
-board_build.flash_mode = dout
+board_build.flash_mode = ${common.flash_mode}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_1m0m} -DFASTYBIRD_3CH_POWER_STRIP_R1
-monitor_speed = ${espressif.monitor_speed}
+build_flags = ${espressif.build_flags} -DFASTYBIRD_3CH_POWER_STRIP_R1
+monitor_speed = ${common.monitor_speed}
 
 # ------------------------------------------------------------------------------
 # ITEAD BOARDS
 # ------------------------------------------------------------------------------
 
 [env:itead-sonoff-basic]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
+platform = ${espressif.platform_esp8266}
+framework = ${common.framework}
 board = ${espressif.board_1m}
-board_build.flash_mode = ${espressif.flash_mode}
+board_build.flash_mode = ${common.flash_mode}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_BASIC
-monitor_speed = ${espressif.monitor_speed}
+build_flags = ${espressif.build_flags} -DITEAD_SONOFF_BASIC
+monitor_speed = ${common.monitor_speed}
 
 [env:itead-sonoff-s20]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
+platform = ${espressif.platform_esp8266}
+framework = ${common.framework}
 board = ${espressif.board_1m}
-board_build.flash_mode = ${espressif.flash_mode}
+board_build.flash_mode = ${common.flash_mode}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_S20
-monitor_speed = ${espressif.monitor_speed}
+build_flags = ${espressif.build_flags} -DITEAD_SONOFF_S20
+monitor_speed = ${common.monitor_speed}
 
 [env:itead-sonoff-dual-r2]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
+platform = ${espressif.platform_esp8266}
+framework = ${common.framework}
 board = ${espressif.board_1m}
-board_build.flash_mode = ${espressif.flash_mode}
+board_build.flash_mode = ${common.flash_mode}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_DUAL_R2
-monitor_speed = ${espressif.monitor_speed}
+build_flags = ${espressif.build_flags} -DITEAD_SONOFF_DUAL_R2
+monitor_speed = ${common.monitor_speed}
 
 [env:itead-sonoff-pow]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
+platform = ${espressif.platform_esp8266}
+framework = ${common.framework}
 board = ${espressif.board_1m}
-board_build.flash_mode = ${espressif.flash_mode}
+board_build.flash_mode = ${common.flash_mode}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_POW
-monitor_speed = ${espressif.monitor_speed}
+build_flags = ${espressif.build_flags} -DITEAD_SONOFF_POW
+monitor_speed = ${common.monitor_speed}
 
 [env:itead-sonoff-pow-r2]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
+platform = ${espressif.platform_esp8266}
+framework = ${common.framework}
 board = ${espressif.board_1m}
-board_build.flash_mode = ${espressif.flash_mode}
+board_build.flash_mode = ${common.flash_mode}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_POW_R2 -DDISABLE_POSTMORTEM_STACKDUMP
-monitor_speed = ${espressif.monitor_speed}
+build_flags = ${espressif.build_flags} -DITEAD_SONOFF_POW_R2 -DDISABLE_POSTMORTEM_STACKDUMP
+monitor_speed = ${common.monitor_speed}
 
 [env:itead-sonoff-sc]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
+platform = ${espressif.platform_esp8266}
+framework = ${common.framework}
 board = ${espressif.board_1m}
-board_build.flash_mode = ${espressif.flash_mode}
+board_build.flash_mode = ${common.flash_mode}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_SC
+build_flags = ${espressif.build_flags} -DITEAD_SONOFF_SC
 monitor_speed = 19200
 
 [env:itead-sonoff-rfbirdge]
-platform = ${espressif.platform}
-framework = ${espressif.framework}
+platform = ${espressif.platform_esp8266}
+framework = ${common.framework}
 board = ${espressif.board_1m}
-board_build.flash_mode = ${espressif.flash_mode}
+board_build.flash_mode = ${common.flash_mode}
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags_1m0m} -DITEAD_SONOFF_RFBRIDGE
-monitor_speed = ${espressif.monitor_speed}
+build_flags = ${espressif.build_flags} -DITEAD_SONOFF_RFBRIDGE
+monitor_speed = ${common.monitor_speed}
