After testing fixes

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,7 +30,8 @@ lib_deps =
     Embedis
     Brzo I2C
     Regexp
-    https://github.com/marvinroger/async-mqtt-client#v0.8.1
+    EasyLed
+    AsyncMqttClient@^0.9.0
     https://github.com/plerup/espsoftwareserial#3.4.1
     https://github.com/me-no-dev/ESPAsyncTCP#55cd520
     https://github.com/me-no-dev/ESPAsyncWebServer#05306e4
