--- a/platformio.ini
+++ b/platformio.ini
@@ -88,7 +88,7 @@ board = d1
 board_build.ldscript = eagle.flash.1m256.ld
 lib_deps = ${espressif.lib_deps}
 lib_ignore = ${espressif.lib_ignore}
-build_flags = ${espressif.build_flags} -DFASTYBIRD_3CH_POWER_STRIP_R1 -DDEBUG_SUPPORT=1 -DDEBUG_SERIAL_SUPPORT=1
+build_flags = ${espressif.build_flags} -DITEAD_SONOFF_POW_R2 -DDEBUG_SUPPORT=1 -DDEBUG_SERIAL_SUPPORT=1
 monitor_speed = ${common.monitor_speed}
 
 [env:test-board-samd21]
